<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FORTE OIL</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="banner">Forte Mobile</string>
    <string name="see_map">See map</string>
    <string name="next_station">%1$s is %2$s away</string>
    <string name="home_column_width">170sp</string>
    <string name="locating_service_station">Locating nearest service station</string>
    <string name="title_activity_map">Maps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="current_location">Your current location is %s</string>
    <string name="demo_loc">Forte Oil - Wharf Road</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="location_label">Fuel Station Locator</string>
    <string name="vehicle_maintenance">Vehicle Maintenance</string>
    <string name="products">Products</string>
    <string name="news">News</string>
    <string name="available">Available Stations</string>
    <string name="locate">Locate Nearest Station</string>
    <string name="register_vehicle">Register Vehicle</string>
    <string name="alerts">Alerts</string>
    <string name="title_activity_center_list">Centers</string>
    <string name="no_centers">No centers were found</string>
    <string name="title_activity_web_view">Web</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="empty_centers">No centers were found</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="view_in_map">View in map</string>
    <string name="loading">Loading, wait...</string>
    <string name="search_nearest_center">Searching for nearest center, please wait...</string>
    <string name="closest_station_is">Closest station is</string>
    <string name="Km">kilometer</string>
    <string name="Mi">miles</string>

</resources>
