<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closest_station_is"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lbl_nearest_center_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/lbl_loading_nearest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_nearest_center" />

    <TextView
        android:id="@+id/lbl_distance_away"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="distance"
        android:visibility="gone" />

    <TextView
        android:id="@+id/lnk_view_in_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/view_in_map"
        android:textColor="@color/link"
        android:visibility="gone" />

</LinearLayout>
